add hash indexing logic