@@ -78,9 +78,6 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-pmd-plugin</artifactId>
                 <version>3.14.0</version>
-                <configuration>
-                    <argLine>--enable-preview</argLine>
-                </configuration>
                 <executions>
                     <execution>
                         <id>pmd-scan</id>
